--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
   },
   "devDependencies": {
     "node-sass": "^7.0.1",
-    "nuxt": "3.0.0-rc.1",
-    "sass": "^1.52.1",
+    "nuxt": "^3.0.0-rc.3",
+    "sass": "^1.52.3",
     "sass-loader": "^13.0.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.7",
     "@nuxtjs/apollo": "^4.0.1-rc.5",
     "@vue/apollo-composable": "^4.0.0-alpha.17",
-    "contentful": "^9.1.28",
-    "contentful-management": "^10.6.0",
+    "contentful": "^9.1.32",
+    "contentful-management": "^10.6.2",
     "graphql": "^16.5.0",
     "graphql-tag": "^2.12.6"
   }
